<resources>
    <string name="app_name">MyApp</string>
    <string name="action_settings">Settings</string>

    <string name="SCORE">SCORE</string>
    <string name="TIME">TIME</string>
    <string name="MOVES">MOVES</string>
    <string name="START">START</string>
    <string name="RESTART">RESTART</string>

    <string name="TAG11">1-1</string>
    <string name="TAG12">1-2</string>
    <string name="TAG13">1-3</string>
    <string name="TAG14">1-4</string>
    <string name="TAG21">2-1</string>
    <string name="TAG22">2-2</string>
    <string name="TAG23">2-3</string>
    <string name="TAG24">2-4</string>
    <string name="TAG31">3-1</string>
    <string name="TAG32">3-2</string>
    <string name="TAG33">3-3</string>
    <string name="TAG34">3-4</string>
    <string name="TAG41">4-1</string>
    <string name="TAG42">4-2</string>
    <string name="TAG43">4-3</string>
    <string name="TAG44">4-4</string>


</resources>
